--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-
+ <link rel="shortcut icon" href="src/assets/Logo.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Desenvolvimento Web</title>
 </head>
